[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors         = [{ name = "RivenSkaye", email = "Riven@tae.moe" }]
    classifiers     = ["License :: OSI Approved :: MIT License"]
    dependencies    = ["typing-extensions ~=4"]
    dynamic         = ["description", "version"]
    license         = { file = "LICENSE" }
    maintainers     = [{ name = "RivenSkaye", email = "Riven@tae.moe" }]
    name            = "EnforceTypes"
    readme          = "README.rst"
    requires-python = ">=3.8"

    [project.urls]
        "Bug Tracker" = "https://github.com/RivenSkaye/EnforceTypes/issues"
        Documentation = "https://github.com/RivenSkaye/EnforceTypes/blob/master/README.rst"
        Home          = "https://github.com/RivenSkaye/EnforceTypes"
        Source        = "https://github.com/RivenSkaye/EnforceTypes"
