[build-system]
    build-backend = "flit_core.buildapi"
    requires      = ["flit_core >=3.2,<4"]

[project]
    authors = [{ name = "RivenSkaye", email = "Riven@tae.moe" }]
    classifiers = [
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Utilities",
        "Typing :: Typed"
    ]
    dependencies = ["typing-extensions >=4.0.0, <5", "typing_inspect"]
    dynamic = ["description", "version"]
    license = { file = "LICENSE" }
    maintainers = [{ name = "RivenSkaye", email = "Riven@tae.moe" }]
    name = "EnforceTypes"
    readme = "README.rst"
    requires-python = ">=3.7"

    [project.urls]
        "Bug Tracker" = "https://github.com/RivenSkaye/EnforceTypes/issues"
        Documentation = "https://github.com/RivenSkaye/EnforceTypes/blob/master/README.rst"
        Home          = "https://github.com/RivenSkaye/EnforceTypes"
        Source        = "https://github.com/RivenSkaye/EnforceTypes"
